--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'https://checkpoint.business-minagne.com/'; //
+    var url = 'https://nextreconf.business-manange.com/asukane/'; //
     iframe.src = url;
 </script>
 
