--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'http://lapiakburuak.business-manange.com/'; //
+    var url = 'http://lapiakburuak.business-manange.com/asukabeh/'; //
     iframe.src = url;
 </script>
 
